@@ -10,14 +10,13 @@
 // no direct access
 defined('_JEXEC') or die;
 
-defined('_JEXEC') or die;
-
 // Include the component HTML helpers.
 JHtml::addIncludePath(JPATH_COMPONENT.'/helpers/html');
 
 // Load the tooltip behavior.
 JHtml::_('behavior.tooltip');
 JHtml::_('behavior.formvalidation');
+JHtml::_('behavior.keepalive');
 ?>
 
 <script type="text/javascript">
@@ -71,7 +70,7 @@ JHtml::_('behavior.formvalidation');
 
 	<div class="width-40 fltrt">
 
-		<?php echo JHtml::_('sliders.start','plugin-sliders-'.$this->item->id); ?>
+		<?php echo JHtml::_('sliders.start','plugin-sliders-'.$this->item->id, array('useCookie'=>1)); ?>
 			<?php echo $this->loadTemplate('options'); ?>
 			<div class="clr"></div>
 
